src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-147.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incab="
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: incab
              option: BacksightAzimuthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing angle
    severity: Error
