src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-148.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=2\")"
---
items:
  - loc: "#units incab=2"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Degrees
          value: 2
        loc: incab=2
        locs:
          correction: "2"
          option: incab
        option: BacksightAzimuthCorrection
    type: UnitsDirective
