src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-153.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units ab=g incab=2\")"
---
items:
  - loc: "#units ab=g incab=2"
    locs:
      directive: "#units"
    options:
      - loc: ab=g
        locs:
          option: ab
          unit: g
        option: BacksightAzimuthUnit
        unit: Grads
      - correction:
          unit: Grads
          value: 2
        loc: incab=2
        locs:
          correction: "2"
          option: incab
        option: BacksightAzimuthCorrection
    type: UnitsDirective
