src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-154.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units ab=g incab=2m\")"
---
items:
  - loc: "#units ab=g incab=2m"
    locs:
      directive: "#units"
    options:
      - loc: ab=g
        locs:
          option: ab
          unit: g
        option: BacksightAzimuthUnit
        unit: Grads
      - correction:
          unit: Mils
          value: 2
        loc: incab=2m
        locs:
          correction: 2m
          option: incab
        option: BacksightAzimuthCorrection
    type: UnitsDirective
