src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-156.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=-2q-\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incab=-2q-"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "-2q-"
              loc: incab=-2q
              locs:
                correction: "-2q"
                option: incab
              option: BacksightAzimuthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDANGLEUNIT
    loc: q
    message: Invalid angle unit
    severity: Error
  - code: EUNEXPECTED
    loc: "-"
    message: Unexpected text
    severity: Error
